Add api route admin match
